--- a/i18n/es_AR.csv
+++ b/i18n/es_AR.csv
@@ -1,12 +1,12 @@
 "Cancelled.","Cancelado"
-"Rejected.","Rechazadp"
+"Rejected.","Rechazado"
 "On Its way.","En camino"
-"Waiting for Payment.","Aguardmoova el pago"
+"Waiting for Payment.","Aguardandoel pago"
 "Payment Successful","Pago exitoso"
 "Payment Rejected","Pago rechazado"
-"Waiting for Rider","Espermoova al conductor"
+"Waiting for Rider","Esperando moova al conductor"
 "Rider not found","Conductor no encontrado"
-"Traveling to Start Address","Viajmoova a la dirección de inicio"
+"Traveling to Start Address","Viajando a la dirección de inicio"
 "The rider is at the Start Address","El conductor se encuentra en la direccion de inicio"
 "Traveling to End Address","En viaje hacia el destino final"
 "The rider is at the End Address","El conductor llego al destino final"
@@ -20,6 +20,6 @@
 "Shipment Cancelled by the Rider","Envío cancelado por el conductor"
 "Shipment Cancelled by the Receiver","Envío cancelado por el receptor"
 "Shipment Cancelled by the Sender","Envío cancelado por el conductor"
-"Waiting for Confirmation","Espermoova confirmación"
-"Waiting for a Second Confirmation","Espermoova una segunda confirmación"
+"Waiting for Confirmation","Esperando confirmación"
+"Waiting for a Second Confirmation","Esperando  una segunda confirmación"
 "Started","Iniciado"
